--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "//anglodiseno.github.io/testhugo/"
 languageCode = "es-es"
 title = "Test Hugo Site"
 theme = "tale"
